--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,24 @@
+<div class="flex-body">
 <app-ncats-header></app-ncats-header>
-<div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px" fxLayoutAlign="start none">
+<div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px" fxLayoutAlign="space-around center">
   <div fxFlex="45">
 <div class="wrapper">
   <iframe class="embed-responsive-item" frameborder="0" id="sketcher" [src]="url">
   </iframe>
  </div>
-<button  mat-raised-button color="'accent'" (click)="submit()">Search</button>
+<button  mat-raised-button color="accent" (click)="submit()">Search</button>
   </div>
  <div fxFlex="45">
+   <div *ngIf="loading" class = "loadingIcon" fxLayoutAlign="center center">
+     <mat-spinner></mat-spinner>
+   </div>
  {{data | json }}
  </div>
+</div>
+<div class="scroll-to-top" [ngClass]="{'show-scroll': navIsFixed}">
+  <button  mat-fab color="primary" (click)="scrollToTop()">
+    <mat-icon> arrow_upward </mat-icon>
+  </button>
+</div>
 </div>
  <app-ncats-footer class ="footer"></app-ncats-footer>
