--- a/src/app/ncats-footer/ncats-footer.component.css
+++ b/src/app/ncats-footer/ncats-footer.component.css
@@ -6,9 +6,26 @@ a:hover, a:focus {
   color: #23527c;
   text-decoration: underline;
 }
-#footer-links{
-  display: flex;
+
+ul#footer-links {
+  padding: 1% 0 0 0;
+  margin: 0 auto;
+  display: table;
 }
+
+#footer-links > li {
+  display: inline;
+  list-style-type: none;
+  font-weight: bold;
+}
+
+#footer-links > li:after {
+  content: "|";
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #c1c1c1;
+}
+
 footer {
   flex-shrink: 0;
   margin-top: auto;
