--- a/src/app/ncats-footer/ncats-footer.component.html
+++ b/src/app/ncats-footer/ncats-footer.component.html
@@ -1,31 +1,32 @@
-  <div class = "footer" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center center">
-  <mat-list id="footer-links" fxFlex="100">
-    <mat-list-item><a href="/">NCATS Home</a></mat-list-item>
+<div class = "footer" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center center">
 
-    <mat-list-item><a href="http://ncats.nih.gov/sitemap" target="_blank">Site Map</a></mat-list-item>
+  <ul id="footer-links">
+    <li><a href="/">NCATS Home</a></li>
 
-    <mat-list-item><a href="http://ncats.nih.gov/privacy" target="_blank">Privacy Notice</a></mat-list-item>
+    <li><a href="http://ncats.nih.gov/sitemap" target="_blank">Site Map</a></li>
 
-    <mat-list-item><a href="http://ncats.nih.gov/comments" target="_blank">Comment Policy</a></mat-list-item>
+    <li><a href="http://ncats.nih.gov/privacy" target="_blank">Privacy Notice</a></li>
 
-    <mat-list-item><a href="http://ncats.nih.gov/disclaimer" target="_blank">Disclaimer</a></mat-list-item>
+    <li><a href="http://ncats.nih.gov/comments" target="_blank">Comment Policy</a></li>
 
-    <mat-list-item><a href="http://ncats.nih.gov/accessibility" target="_blank">Accessibility</a></mat-list-item>
+    <li><a href="http://ncats.nih.gov/disclaimer" target="_blank">Disclaimer</a></li>
 
-    <mat-list-item><a href="http://ncats.nih.gov/plugins" target="_blank">Viewers &amp;  Players</a></mat-list-item>
+    <li><a href="http://ncats.nih.gov/accessibility" target="_blank">Accessibility</a></li>
 
-    <mat-list-item><a href="http://ncats.nih.gov/foia" target="_blank">FOIA</a></mat-list-item>
+    <li><a href="http://ncats.nih.gov/plugins" target="_blank">Viewers &amp;  Players</a></li>
 
-    <mat-list-item><a href="http://oig.hhs.gov" target="_blank">OIG</a></mat-list-item>
-  </mat-list>
+    <li><a href="http://ncats.nih.gov/foia" target="_blank">FOIA</a></li>
+
+    <li><a href="http://oig.hhs.gov" target="_blank">OIG</a></li>
+  </ul>
+</div>
+<div class="region region-footer" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center center">
+  <div class="content" fxFlex="100">
+    <br>
+    <p style="text-align: center;">If you have problems viewing PDF files, download the latest version of <a href="http://get.adobe.com/reader/" title="Visit to download Adobe Reader">Adobe Reader</a></p>
+
+    <p style="text-align: center;">For <a href="http://edi.nih.gov/consulting/language-access-program/about" target="_blank" title="Read  the plan">language access</a> assistance, contact the <a href="mailto:info@ncats.nih.gov" title="Email Public Information Officer">NCATS Public Information Officer</a></p>
+
+    <p style="text-align: center;"><span style="font-size: small;">National Center for Advancing Translational Sciences (NCATS), 6701 Democracy Boulevard, Bethesda MD 20892-4874 • 301-594-8966</span></p>
   </div>
-  <div class="region region-footer" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center center">
-      <div class="content" fxFlex="100">
-<br>
-        <p style="text-align: center;">If you have problems viewing PDF files, download the latest version of <a href="http://get.adobe.com/reader/" title="Visit to download Adobe Reader">Adobe Reader</a></p>
-
-        <p style="text-align: center;">For <a href="http://edi.nih.gov/consulting/language-access-program/about" target="_blank" title="Read  the plan">language access</a> assistance, contact the <a href="mailto:info@ncats.nih.gov" title="Email Public Information Officer">NCATS Public Information Officer</a></p>
-
-        <p style="text-align: center;"><span style="font-size: small;">National Center for Advancing Translational Sciences (NCATS), 6701 Democracy Boulevard, Bethesda MD 20892-4874 • 301-594-8966</span></p>
-      </div>
-    </div>
+</div>
