--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,23 +3,8 @@
 flex: 1;
 }
 
-.embed-responsive-item{
-  width: 45vw;
-  height: 45vh;
-}
-
-.loadingIcon {
-  position: absolute; /* Sit on top of the page content */
-  display: none; /* Hidden by default */
-  width: 100%; /* Full width (cover the whole page) */
-  height: 100%; /* Full height (cover the whole page) */
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0,0,0,0.3); /* Black background with opacity */
-  color:#642F6C;
-  z-index: 666;
+.body-row {
+  padding-top: 7vh;
 }
 
 .return{
