--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="loading" class = "loadingIcon" fxLayoutAlign="center center">
+  <mat-spinner></mat-spinner>
+</div>
 <div class="flex-body">
 <app-ncats-header></app-ncats-header>
 <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px" fxLayoutAlign="space-around start" class="body-row">
