--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
     <div fxFlex="95">
       <app-data-list></app-data-list>
     </div>
-
+  </div>
 
   <div class="scroll-to-top" [ngClass]="{'show-scroll': navIsFixed}">
   <button  mat-fab color="primary" (click)="scrollToTop()">
