--- a/src/app/data-list/data-list.component.html
+++ b/src/app/data-list/data-list.component.html
@@ -18,7 +18,7 @@
     </button>
     <button mat-menu-item (click)=" downloadCSV()">
       <mat-icon>border_all</mat-icon>
-      <span>CSV</span>
+      <span>TSV</span>
     </button>
   </mat-menu>
 
